Summer Solstice cleaning: refresh with latest character widths

cf. commitid 1005EE7DA200F16918D and
https://sourceware.org/bugzilla/show_bug.cgi?id=26120